...
 * @param testTag the test tag of the page
 */
sealed class Page(
    val name: String,
    val destination: Screen_,
    val iconId: Int,
    val testTag: String
) {
  object Camera :
      Page("CameraPage", Screen_.Camera, cameraIconId, NavigationTestTags_.CAMERA_BUTTON)

  object Profile :
      Page("ProfilePage", Screen_.Profile, profileIconId, NavigationTestTags_.PROFILE_BUTTON)
...
